# LocalCodingAgent

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py
app/agents/: base_agent.py
docs/: architecture.md
prompts/: system_prompt_template.md
src/agent/: agent.py
src/agents/: base_agent.py
src/local_coding_agent/: main.py
src/local_coding_agent/agent/: agent.py
src/local_coding_agent/llm/: llm_provider.py
src/local_coding_agent/tools/: tool_manager.py
tests/: test_agent.py  test_base_agent.py
tests/agent/: test_agent.py
tests/tools/: test_tool_manager.py
