[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local_coding_agent"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A local AI agent for coding tasks."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add your project's core dependencies here
    # e.g., "openai", "anthropic"
]

[project.urls]
"Homepage" = "https://github.com/your-username/repo-LocalCodingAgent"
"Bug Tracker" = "https://github.com/your-username/repo-LocalCodingAgent/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pylint",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
pkg-dir = {"" = "src"}

